Fix Footer. move to stylesheet and adjust spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,103 +1,111 @@
 html {
-  position: relative;
-  min-height: 94%;
+position: relative;
+min-height: 94.9%;
 }
 
 /* The navigation bar */
 .navbar {
-  overflow: visible;
-  background-color: #3E89F2;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  left: 0;
-  right: 0;
-  width: 100%; /* Full width */
-  height: 19vh;
+overflow: visible;
+background-color: #3E89F2;
+position: fixed; /* Set the navbar to fixed position */
+top: 0; /* Position the navbar at the top of the page */
+left: 0;
+right: 0;
+width: 100%; /* Full width */
+height: 19vh;
 }
-
 
 
 .titleText {
-    color: white;
-    font-size: 4vh;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.menuItem {
-  border: none;
-  outline: none;
   color: white;
-  padding: 14px 16px;
-  font-size: 2.0vh;
+  font-size: 4vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 
+.menuItem {
+border: none;
+outline: none;
+color: white;
+padding: 14px 16px;
+font-size: 2.0vh;
+font-family: Arial, Helvetica, sans-serif;
+}
+
 /* Main content */
 .main {
-  margin-top: 19vh; /* Add a top margin to avoid content overlay */
-  margin-bottom: 8vh;
-  }
+margin-top: 19vh; /* Add a top margin to avoid content overlay */
+margin-bottom: 8vh;
+}
+       
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 2.0vh;
+  /* color: white; */
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: visible;
+}
 
-            
+/* Dropdown button */
+.dropdown .dropbtn {
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-size: 2.0vh;
+  font-family: Arial, Helvetica, sans-serif; /* Important for vertical align on mobile phones */
+  /*margin: 0;  Important for vertical align on mobile phones */
+}
 
-  /* Links inside the navbar */
-  .navbar a {
-    float: left;
-    font-size: 2.0vh;
-    /* color: white; */
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #0a3b71;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
-  /* The dropdown container */
-  .dropdown {
-    float: left;
-    overflow: visible;
-  }
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
 
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-size: 2.0vh;
-    font-family: Arial, Helvetica, sans-serif; /* Important for vertical align on mobile phones */
-    /*margin: 0;  Important for vertical align on mobile phones */
-  }
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #0a3b71;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0rem;
+  text-align: center;
+  height: 7vh;
+  color: black;
+  overflow: visible;
 }
